--- a/config/Mitmit.dtsi
+++ b/config/Mitmit.dtsi
@@ -45,25 +45,26 @@
     };
 
 	encoder_left: encoder_left {
-  	  compatible = "alps,ec11";
- 	   a-gpios = <&gpio1 1 (GPIO_PULL_UP | GPIO_ACTIVE_HIGH)>; // GPIO 101
- 	   b-gpios = <&gpio0 31 (GPIO_PULL_UP | GPIO_ACTIVE_HIGH)>; // GPIO 031
-  	  steps = <30>; // Adjust based on your encoder's detents
- 	   status = "okay";
+        compatible = "alps,ec11";
+      		a-gpios = <&gpio1 1 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>;
+	   	b-gpios = <&gpio0 31 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>;
+		steps = <12>;
+      		status = "disabled";
 	};
 
+   
 	encoder_right: encoder_right {
-  	  compatible = "alps,ec11";
- 	   a-gpios = <&gpio1 1 (GPIO_PULL_UP | GPIO_ACTIVE_HIGH)>; // GPIO 101
- 	   b-gpios = <&gpio0 31 (GPIO_PULL_UP | GPIO_ACTIVE_HIGH)>; // GPIO 031
-  	  steps = <30>; // Adjust based on your encoder's detents
- 	   status = "okay";
+		compatible = "alps,ec11";
+		a-gpios = <&gpio1 1 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>;
+	 	b-gpios = <&gpio0 31 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>;
+		steps = <12>;
+       		status = "disabled";
 	};
 
-	sensors: sensors {
+    sensors: sensors {
         compatible = "zmk,keymap-sensors";
         sensors = <&encoder_left &encoder_right>;
-        triggers-per-rotation = <15>;
+        triggers-per-rotation = <12>;
 	};
 
 };
