--- a/config/Mitmit.dtsi
+++ b/config/Mitmit.dtsi
@@ -5,7 +5,24 @@
         zmk,kscan = &kscan0;
         zmk,matrix_transform = &default_transform;
 	zmk,physical-layout = &default_layout;
+    };
 
+    kscan0: kscan_composite {
+        compatible = "zmk,kscan-composite";
+        rows = <6>;
+        columns = <16>;
+
+        // Include the matrix driver
+        matrix {
+            kscan = <&kscan1>;
+        };
+
+        // Include the direct GPIO driver...
+        direct {
+            kscan = <&kscan2>;
+            row-offset = <2>;
+            col-offset = <7>; 
+        };
     };
 
     default_transform: keymap_transform_0 {
@@ -16,26 +33,35 @@
         map = <
             RC(0,0) RC(0,1) RC(0,2) RC(0,3) RC(0,4) RC(0,5) RC(0,6)                          RC(0,7) RC(0,8) RC(0,9) RC(0,10) RC(0,11) RC(0,12) RC(0,13)
             RC(1,0) RC(1,1) RC(1,2) RC(1,3) RC(1,4) RC(1,5) RC(1,6)                          RC(1,7) RC(1,8) RC(1,9) RC(1,10) RC(1,11) RC(1,12) RC(1,13)
-            RC(2,0) RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)                                          RC(2,8) RC(2,9) RC(2,10) RC(2,11) RC(2,12) RC(2,13)
-                                                            RC(3,6)                          RC(3,7)
+            RC(2,0) RC(2,1) RC(2,2) RC(2,3) RC(2,4) RC(2,5)                                          RC(2,8) RC(2,9) RC(2,10) RC(2,11) RC(2,12) RC(2,13)                                                                            
+            RC(3,0) RC(3,1) RC(3,2) RC(3,3) RC(3,4) RC(3,5) RC(3,6)                          RC(3,7) RC(3,8) RC(3,9) RC(3,10) RC(3,11) RC(3,12) RC(3,13)
             RC(4,0) RC(4,1) RC(4,2) RC(4,3) RC(4,4) RC(4,5) RC(4,6)                          RC(4,7) RC(4,8) RC(4,9) RC(4,10) RC(4,11) RC(4,12) RC(4,13)
             RC(5,0) RC(5,1) RC(5,2) RC(5,3) RC(5,4) RC(5,5) RC(5,6)                          RC(5,7) RC(5,8) RC(5,9) RC(5,10) RC(5,11) RC(5,12) RC(5,13)
-            RC(6,0) RC(6,1) RC(6,2) RC(6,3) RC(6,4) RC(6,5) RC(6,6)                          RC(6,7) RC(6,8) RC(6,9) RC(6,10) RC(6,11) RC(6,12) RC(6,13)
         >;
     };
 
-    kscan0: kscan {
+    kscan1: kscan_matrix {
         compatible = "zmk,kscan-gpio-matrix";
-        wakeup-source;
+        // define 6x7 matrix here...
+	    wakeup-source;
         diode-direction = "col2row";
         row-gpios
             =<&gpio0 2 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>,  /* Row 0 */ 
             <&gpio1 15 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>,  /* Row 1 */
             <&gpio1 13 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>,  /* Row 2 */ 
-            <&gpio1 7 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>,   /* Row new 3*/
-            <&gpio1 11 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>,  /* Row 4 */ 
-            <&gpio0 10 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>,  /* Row 5 */ 
-            <&gpio0 9 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>;   /* Row 6*/
+            <&gpio1 11 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>,  /* Row 3 */ 
+            <&gpio0 10 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>,  /* Row 4 */ 
+            <&gpio0 9 (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>;   /* Row 5*/
+
+    };
+
+ // Direct GPIO for SW1
+    kscan2: kscan_direct {
+        compatible = "zmk,kscan-gpio-direct";
+        // define 2 direct GPIOs here...
+	    input-gpios = 
+            <&gpio1 2 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>   // Left SW1 (use any free GPIO)
+            <&gpio1 7 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>;  // Right SW1 (use any free GPIO)
     };
 
 	encoder_left: encoder_left {
