--- a/config/Mitmit.dtsi
+++ b/config/Mitmit.dtsi
@@ -60,7 +60,7 @@
         compatible = "zmk,kscan-gpio-direct";
         // define 2 direct GPIOs here...
 	    input-gpios = 
-            <&gpio1 2 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>   // Left SW1 (use any free GPIO)
+            <&gpio1 2 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>,   // Left SW1 (use any free GPIO)
             <&gpio1 7 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>;  // Right SW1 (use any free GPIO)
     };
 
