--- a/boards/shields/Mitmit/Mitmit-layouts.dtsi
+++ b/boards/shields/Mitmit/Mitmit-layouts.dtsi
@@ -5,7 +5,7 @@
         compatible = "zmk,physical-layout";
         display-name = "Mitmit";
         transform = <&default_transform>;
-        kscan = <&kscan0>;
+        kscan = <&kscan_composite>;
 
         studio-config {
             compatible = "zmk,studio-config";
