--- a/boards/shields/Mitmit/Mitmit.dtsi
+++ b/boards/shields/Mitmit/Mitmit.dtsi
@@ -82,7 +82,7 @@
 	
 };
 
- &default_layout {
+ &physical_layout {
     transform = <&default_transform>;
     // kscan = <&kscan_composite>; //
     };
