--- a/config/Mitmit.conf
+++ b/config/Mitmit.conf
@@ -27,3 +27,7 @@ CONFIG_ZMK_POINTING_SMOOTH_SCROLLING=y
 
 # enforce windows to show keyboard battery
 CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=y
+
+
+# Turn on logging, and set ZMK logging to debug output
+CONFIG_ZMK_USB_LOGGING=y
