--- a/build.yaml
+++ b/build.yaml
@@ -17,6 +17,8 @@
 #     artifact-name: corne_left_with_logging
 #
 ---
+
+  # This is the main firmware
 include:
   - board: nice_nano_v2
     shield: Mitmit_left
@@ -26,6 +28,9 @@ include:
   - board: nice_nano_v2
     shield: Mitmit_right
   
-
+  # Settings Reset firmware
+  # This will build a firmware that can wipe all settings from your
+  # controller. It's useful when you have bluetooth issues or when your split
+  # keyboard halfs are not pairing.
   - board: nice_nano_v2
     shield: settings_reset
