--- a/config/Mitmit.conf
+++ b/config/Mitmit.conf
@@ -12,6 +12,7 @@ CONFIG_ZMK_POINTING=y
 
 
 # Prevent ZMK Studio from modifying keymap (set to 'y' to lock keymap updates)
+CONFIG_ZMK_STUDIO=y
 CONFIG_ZMK_STUDIO_LOCKING=n
 CONFIG_ZMK_KEYBOARD_NAME="Mitmit"
 
