--- a/boards/shields/Mitmit/Mitmit-layouts.dtsi
+++ b/boards/shields/Mitmit/Mitmit-layouts.dtsi
@@ -1,4 +1,10 @@
-#include <physical_layouts.dtsi>
+/ {
+    key_physical_attrs: key_physical_attrs {
+        compatible = "zmk,key-physical-attrs";
+
+        #key-cells = <7>;
+    };
+};
 
 / {
     physical_layout: physical_layout_0  {
