--- a/config/west.yml
+++ b/config/west.yml
@@ -6,19 +6,13 @@ manifest:
     - name: infused-kim
       url-base: https://github.com/infused-kim
 
-    - name: petejohanson
-      url-base: https://github.com/petejohanson
-
-    - name: urob
-      url-base: https://github.com/urob
-
     - name: Haha1609
-      url-base: https://github.com/Haha1609
+      url-base: https://github.com/Haha1609    //my url//
 
   projects:
-    - name: zmk-ps2-trackpoint
+    - name: zmk    //my forked repo//
       remote: Haha1609
-      revision: pr-testing/mouse_ps2_module_base
+      revision: pr-testing/mouse_ps2_module_base  //the branch//
       import: app/west.yml
 
     # Module for PS/2 mouse & TP driver
